# EyerPlayer

EyerPlayerCore/: CMakeLists.txt
EyerPlayerCore/EyerGL/: CMakeLists.txt  EyerGL.hpp  EyerGLComponent.cpp  EyerGLDraw.cpp  EyerGLFrameBuffer.cpp  EyerGLProgram.cpp  EyerGLShader.cpp  EyerGLTexture.cpp  EyerGLVAO.cpp  GLHeader.h
EyerPlayerCore/EyerGLContext/: CMakeLists.txt  EyerGLContextThread.hpp  EyerGLContextThreadPrivate.hpp  EyerGLContextThread_Android.cpp  EyerGLContextThread_Default.cpp  EyerGLContextThread_IOS.cpp  EyerGLTestComponent.cpp  EyerGLTestComponent.hpp  EyerGL_IOS_Context_C_Interface.h  EyerGL_IOS_Context_C_Interface.mm
EyerPlayerCore/EyerMath/: CMakeLists.txt  Eath.cpp  Eath.hpp  Eatrix.hpp  Eatrix4x1.hpp  Eatrix4x4.hpp  EyerMath.hpp
EyerPlayerCore/EyerPlayerIOS/: CMakeLists.txt  EyerGLContextIOS.cpp  EyerGLContextIOS.hpp  EyerPlayerIOS_C.cpp  EyerPlayerIOS_C.h
EyerPlayerCore/EyerPlayerIOSInterface/: CMakeLists.txt  EyerGLContextIOS.cpp  EyerGLContextIOS.hpp  EyerPlayerIOS_C.cpp  EyerPlayerIOS_C.h
EyerPlayeriOS/EyerPlayer/EyerPlayer/: OGLContext.cpp  OGLContext.hpp  OGLContext_C_Interface.h  OGLContext_C_Interface.mm  OGLControllerViewController.mm  OGLView.h  OGLView.mm
EyerPlayeriOS/EyerPlayer/EyerPlayer.xcodeproj/: project.pbxproj
EyerPlayeriOS/EyerPlayer/EyerPlayer.xcodeproj/project.xcworkspace/xcuserdata/lichi.xcuserdatad/: UserInterfaceState.xcuserstate
tools/ios/: build_3rdpart_ios.sh  build_eyer_player_ios.sh
